# lht

./: .gitignore  .pre-commit-config.yaml  README.md  ROADMAP.md  TRAINING_SETUP.md  VISUALIZATION_README.md  pyproject.toml  test_forward.py
configs/: pretrain_base.yaml  pretrain_hierarchical.yaml
scripts/: eval.py  submit_pretrain.sh  train_pretrain.py
src/lht/: __init__.py  attention_masks.py  callbacks.py  config.py  dataset.py  hierarchy.py  lightning_module.py  main.py  model.py  routers.py  training.py  utils.py  visualization.py
src/lht/core/: __init__.py  attention.py  coords.py  model.py
src/lht/data/: __init__.py  basic.py  mlm.py  preprocess.py  qasper_funcs.py  ul2.py
src/lht/utils/: __init__.py  coord_builders.py  full_encoder.py  nested_builder.py  seeding.py  verification.py  visualization.py
tests/: README.md  test_coordinate_design.py  test_data_collator.py  test_geometric_attention.py  test_geometric_coordinates.py  test_model_architecture.py  test_nested_builder.py  test_sliding_window.py  test_training_integration.py  test_util_coord_builders.py
tools/: inspect_hierarchy_vectors.py  print_architecture.py  visualize_batch.py
